@@ -3,6 +3,8 @@ Revision history for Perl extension App::Sqitch
 0.995
      - Fixed test failures due to the introduction of "Negative repeat count
        does nothing" warning in Perl 5.21.1.
+     - Fixed more test failures when DBD::Firebird is installed but Firebird
+       isql cannot be found.
 
 0.994  2014-06-20T02:58:10Z
      - Fixed installation failure due to missing IO::File module on Windows.
